# atlas-cortex

./: .dockerignore  .gitignore  CORE_PRINCIPLES.md  Dockerfile  LLM_BOOTSTRAP_PROMPT.md  README.md  TOOL_SYSTEM_REFERENCE.md  atlas-installer-v0.0.2-20260326.1634.iso.sha256  atlas-installer-v0.0.2-20260326.1639.iso.sha256  atlas-installer-v0.0.2-20260326.1647.iso.sha256  atlas-installer-v0.0.2-20260326.1656.iso.sha256  atlas-installer-v0.0.2-20260326.1722.iso.sha256  atlas-installer-v0.0.2-20260326.1912.iso.sha256  atlas-installer-v0.0.2-20260326.1924.iso.sha256  atlas-installer-v0.0.2-20260326.1953.iso.sha256  atlas-installer-v0.0.2-20260326.2013.iso.sha256  atlas-installer-v0.0.2-20260326.2104.iso.sha256  atlas-installer-v0.0.2-20260326.2239.iso.sha256  atlas-installer-v0.0.2-20260326.2247.iso.sha256  atlas-installer-v0.0.2-20260326.2336.iso.sha256  atlas-installer-v0.0.2-20260327.0050.iso.sha256  atlas-installer-v0.0.2-20260327.0133.iso.sha256  atlas-tablet-core-v0.0.2-20260326.1614.iso.sha256  atlas-tablet-core-v0.0.2-20260326.1621.iso.sha256  atlas-tablet-os-20260325.iso.sha256  atlas-tablet-os-v0.1.0-20260325.0351.iso.sha256  atlas-tablet-os-v0.1.0-20260325.0409.iso.sha256  atlas-tablet-os-v0.1.0-20260325.0439.iso.sha256  atlas-tablet-os-v0.1.0-20260325.0512.iso.sha256  atlas-tablet-os-v0.1.0-20260325.0536.iso.sha256  atlas-tablet-os-v0.1.0-20260325.1525.iso.sha256  atlas-tablet-os-v0.1.0-20260325.1707.iso.sha256  atlas-tablet-os-v0.1.0-20260325.2036.iso.sha256  atlas-tablet-os-v0.1.0-20260325.2105.iso.sha256  atlas-tablet-os-v0.1.0-20260325.iso.sha256  atlas-tablet-os-v0.1.0-20260326.0047.iso.sha256  mp_batch2.py  mp_grounding.py  mp_tracks_v3.py  package-lock.json  (+4 more)
.craft/: packed-files
.github/: copilot-instructions.md
admin/: chat.html  package.json  (+2 more)
(+700 files in other folders)
